Fixing header bugs on IE (tfs : 23697)

--- a/static/bootstrap/custom/quest/_custom-header-footer-top-quest.scss
+++ b/static/bootstrap/custom/quest/_custom-header-footer-top-quest.scss
@@ -113,6 +113,10 @@
 				i {
 					color: $top-link-hover;
 				}
+				#lnkMyAccount {
+					color: $link-color;
+					font-size: 16px;
+				}
 			}
 		}
 		a {
@@ -140,7 +144,7 @@
 		.badge {
 			position: absolute;
 			top: 14px;
-			left: 24px;
+			left: 15px;
 			width: 14px;
 			height: 14px;
 			display: inline-block;
@@ -152,8 +156,18 @@
 			line-height: 0;
 			white-space: nowrap;
 			text-align: left;
-			background-color: #6ea204;
+			background-color: $top-badge-bg-color;
 			border-radius: 10px;
+			i {
+				font-size: 8px;
+				line-height: 4px;
+				margin-left: 0px;
+				color: $badge-color;
+				background: $top-badge-bg-color !important;
+			}
+			i.glyphicon-ok {
+				color: $top-user-check-color;
+			}
 		}
 	}
 	.navbar-toggle:hover {
@@ -201,8 +215,15 @@
 		input[type=text] {
 			border: 1px solid $top-search-input-border-color;
 			font-size: 15px;
-			padding: 5px 20px;
+			padding: 5px 50px 5px 20px;
 			width: 40%;
+			height: 33px;
+		}
+		input:focus {
+			border-color: $link-color;
+			outline: 0;
+			-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(1, 106, 156, 0.6);
+			box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(1, 106, 156, 0.6);
 		}
 		&.open {
 			display: block;
@@ -217,7 +238,7 @@
 			font-size: 20px;
 			position: absolute;
 			top: 18px;
-			margin-left: -28px;
+			margin-left: -32px;
 			padding: 2px 5px 0;
 			background: #fb4f14;
 			color: #fff;
@@ -287,7 +308,7 @@
 			li {
 				display: block;
 				padding: 0;
-				color: $link-color;
+				/*color: $link-color;*/
 			}
 			ul {
 				display: none;
